# testcaser

./: .gitignore  .gitmodules  .travis.yml  BUILD.sh  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Doxyfile  Makefile  README.md  appveyor.yml  install.bat  install.sh  test.txt  uninstall.bat  uninstall.sh  unix_install.sh  unix_uninstall.sh
.github/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
core/: mainpage.cc
core/exceptions/: BaseExceptions.hpp  BuildException.hpp  InvalidLimit.hpp
core/maker/: builder.hpp
docs/html/: BaseExceptions_8hpp_source.html  BuildException_8hpp_source.html  InvalidLimit_8hpp_source.html  RandomTypes_8hpp_source.html  annotated.html  builder_8hpp_source.html  classes.html  classtestcaser_1_1exceptions_1_1BaseException-members.html  classtestcaser_1_1exceptions_1_1BaseException.html  classtestcaser_1_1exceptions_1_1maker_1_1FinalizationError-members.html  classtestcaser_1_1exceptions_1_1maker_1_1FinalizationError.html  classtestcaser_1_1exceptions_1_1maker_1_1LimitError-members.html  classtestcaser_1_1exceptions_1_1maker_1_1LimitError.html  classtestcaser_1_1exceptions_1_1maker_1_1LimitExhaustedError-members.html  classtestcaser_1_1exceptions_1_1maker_1_1LimitExhaustedError.html  classtestcaser_1_1exceptions_1_1maker_1_1LimitIntervalError-members.html  classtestcaser_1_1exceptions_1_1maker_1_1LimitIntervalError.html  classtestcaser_1_1exceptions_1_1maker_1_1TestCaseRecordError-members.html  classtestcaser_1_1exceptions_1_1maker_1_1TestCaseRecordError.html  classtestcaser_1_1exceptions_1_1maker_1_1TestFileIOError-members.html  classtestcaser_1_1exceptions_1_1maker_1_1TestFileIOError.html  classtestcaser_1_1integrator_1_1Result-members.html  classtestcaser_1_1integrator_1_1Result.html  classtestcaser_1_1integrator_1_1VirtualJudge-members.html  classtestcaser_1_1integrator_1_1VirtualJudge.html  classtestcaser_1_1maker_1_1BaseLimitProperties-members.html  classtestcaser_1_1maker_1_1BaseLimitProperties.html  classtestcaser_1_1maker_1_1RandomCharacterLimit-members.html  classtestcaser_1_1maker_1_1RandomCharacterLimit.html  classtestcaser_1_1maker_1_1RandomIntegerLimit-members.html  classtestcaser_1_1maker_1_1RandomIntegerLimit.html  classtestcaser_1_1maker_1_1RandomUnsignedIntegerLimit-members.html  classtestcaser_1_1maker_1_1RandomUnsignedIntegerLimit.html  classtestcaser_1_1maker_1_1TestCaseBuilder-members.html  classtestcaser_1_1maker_1_1TestCaseBuilder.html  classtestcaser_1_1maker_1_1types_1_1RandomAlphabet-members.html  classtestcaser_1_1maker_1_1types_1_1RandomAlphabet.html  classtestcaser_1_1maker_1_1types_1_1RandomInteger-members.html  classtestcaser_1_1maker_1_1types_1_1RandomInteger.html  classtestcaser_1_1maker_1_1types_1_1RandomLowerAlphabet-members.html  (+68 more)
docs/latex/: annotated.tex  classtestcaser_1_1exceptions_1_1BaseException.eps  classtestcaser_1_1exceptions_1_1BaseException.tex  classtestcaser_1_1exceptions_1_1maker_1_1FinalizationError.eps  classtestcaser_1_1exceptions_1_1maker_1_1FinalizationError.tex  classtestcaser_1_1exceptions_1_1maker_1_1LimitError.eps  classtestcaser_1_1exceptions_1_1maker_1_1LimitError.tex  classtestcaser_1_1exceptions_1_1maker_1_1LimitExhaustedError.eps  classtestcaser_1_1exceptions_1_1maker_1_1LimitExhaustedError.tex  classtestcaser_1_1exceptions_1_1maker_1_1LimitIntervalError.eps  classtestcaser_1_1exceptions_1_1maker_1_1LimitIntervalError.tex  classtestcaser_1_1exceptions_1_1maker_1_1TestCaseRecordError.eps  classtestcaser_1_1exceptions_1_1maker_1_1TestCaseRecordError.tex  classtestcaser_1_1exceptions_1_1maker_1_1TestFileIOError.eps  classtestcaser_1_1integrator_1_1Result.tex  index.tex  (+47 more)
examples/: integrator_virtual-judge.cc  maker_randomBinary.cc  simple-program.cc
make_output/: first  second  third
testcaser/: integrator  mainpage.cc  maker
(+87 files in other folders)
